# df-data-ingestion

./: .env.aws_ec2_container  .env.aws_ec2_native  .env.aws_ecs_container  .env.on_prem_vm_native  .gitignore  Dockerfile  Makefile  README.md  app_env.aws_ec2_native.dev.env  app_env.aws_ecs_container.dev.env  app_env.on_prem_vm_native.dev.env  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
cfg/: api_log.ini  app_config.dev.yaml  config_dev.yaml
ingest_app/: __main__.py  ingest_app_api.py  ingest_app_cli.py  ingest_app_core.py  settings.py
ingest_app/cfg/: api_log.ini  config_dev.yaml
ingest_app/ingest_spark/: loader.py
scripts/: ingest_app
src/ingest_app/: ingest_app_api.py  ingest_app_cli.py  ingest_app_core.py  settings.py
src/ingest_app/ingest_spark/: create_session.py  loader.py
src/pyspark_apps/: loader.py
